using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;
using System.Text.Json.Serialization;

namespace Backend.Domain.Entities
{
   [Table("servicos")]
   public class Servico
    {
        [Key]
        [Column("ser_id")]
        public int Id { get; set; }

        [Column("ser_nome")]
        [Required]
        public string? Nome { get; set; }

        [Column("ser_descricao")]
        [Required]
        public string? Descricao { get; set; }

        /// <summary>
        /// Define se o cliente está disposto a aceitar valores diferentes do valor mínimo definido
        /// </summary>
        [Column("ser_orcamento_is_aberto")]
        [Required]
        public bool OrcamentoIsAberto { get; set; } = true;

        [Column("ser_prazo")]
        [Required]
        public DateTime Prazo { get; set; }

        [Column("ser_valor_minimo", TypeName = "numeric(6,2)")]
        [Required]
        public decimal ValorMinimo { get; set; }

        /// <summary>
        /// Atributo possívelmente redundante.
        /// Pode ser inferido buscando uma entrega atrelada ao serviço.
        /// </summary>
        [Column("ser_is_entregue")]
        [Required]
        public bool IsEntregue { get; set; } = false;

        [Column("ser_proposta_aceita_id")]
        public int? PropostaAceitaId { get; set; }

        [Column("ser_cli_id")]
        [Required]
        public int ClienteId { get; set; }

        [JsonIgnore]
        public Cliente? Cliente { get; set; }
        
        public ICollection<Proposta>? Propostas { get; set; } = [];
        public Proposta? PropostaAceita { get; set; }
        public Entrega? Entrega { get; set; }
        public ICollection<Avaliacao> Avaliacoes { get; set; } = [];
    }
}